--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "LAViD",
   "license": "ISC",
   "dependencies": {
-    "express": "~3.5.1"
+    "express": "~3.5.1",
+    "mkdirp": "^0.5.0"
   }
 }
