--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "~3.5.1",
-    "mkdirp": "^0.5.0"
+    "mkdirp": "^0.5.0",
+    "node-uuid": "^1.4.1"
   }
 }
