--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "LAViD",
   "license": "ISC",
   "dependencies": {
+    "async": "^0.9.0",
     "express": "~3.5.1",
     "mkdirp": "^0.5.0",
     "node-uuid": "^1.4.1"
