--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "async": "^0.9.0",
     "express": "~3.5.1",
     "mkdirp": "^0.5.0",
-    "node-uuid": "^1.4.1"
+    "node-uuid": "^1.4.1",
+    "ip": "latest"
   }
 }
