--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "~3.5.1",
     "mkdirp": "^0.5.0",
     "node-uuid": "^1.4.1",
-    "ip": "latest"
+    "ip": "latest”,
+    "mongoose": "^3.8.16",
+    "python-shell": "0.0.3"
   }
 }
