adiciona cron e unirest pra poder lidar com o update da saude em services.log

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "ip": "latest",
     "mongoose": "^3.8.16",
     "python-shell": "0.0.3",
-    "kue": "latest"
+    "kue": "latest",
+    "unirest": "latest",
+    "cron": "latest"
   }
 }
